[workspace]

resolver = "3"

members = [
    "plugins/*/crates/model",
    "plugins/*/crates/plugin",
    "deployment",
    "dummy"
]

exclude = [
    "plugins/i18n/crates/model",
    "plugins/i18n/crates/plugin"
]

default-members = [
    "plugins/*/crates/model",
    "plugins/*/crates/plugin"
]

[workspace.package]
version = "0.10.0"
authors = ["Andreas Schaeffer <hanack@nooblounge.net>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/reactive-graph/std"
homepage = "https://www.reactive-graph.io/"
keywords = ["graph", "reactive", "control-flow", "inexor"]
rust-version = "1.87.0"

[workspace.dependencies]
angular-units = "0.2.4"
async-std = "1.12"
async-trait = "0.1"
chrono = "0.4"
dashmap = { version = "6.0", features = ["serde"] }
default-test = "0.1"
license = "3.7"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = { version = "1.4.0-rc2", features = ["console_appender", "file_appender", "toml_format"] }
num-traits = "0.2"
paste = "1.0"
prisma = "0.1.1"
rand = "0.9"
rand_chacha = "0.9"
random-string = "1.0"
rust-embed = { version = "8.7", features = ["debug-embed", "compression"] }
rustc_version = "0.4"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
springtime = "1.0"
springtime-di = { version = "1.0", default-features = false, features = ["threadsafe", "derive"] }
shellexpand = "3.0"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tera = "1"
toml = "0.9"
uuid = { version = "1.17", features = ["serde", "v4", "v5"] }
voca_rs = "1"

### Prefer git to crates.io for development

reactive-graph-behaviour-model-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-behaviour-model-impl = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-behaviour-service-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-config-model = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-graph = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-runtime-model = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-plugin-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-plugin-derive = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-reactive-model-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-reactive-model-impl = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-reactive-service-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git", features = ["derive"] }
reactive-graph-reactive-service-impl = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-type-system-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git", features = ["json5", "toml"] }
reactive-graph-lifecycle = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-utils-test = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }

### Prefer local to git for local development

#reactive-graph-behaviour-model-api = { version = "0.10.0", path = "../inexor-rgf/crates/behaviour/model/api" }
#reactive-graph-behaviour-model-impl = { version = "0.10.0", path = "../inexor-rgf/crates/behaviour/model/impl" }
#reactive-graph-behaviour-service-api = { version = "0.10.0", path = "../inexor-rgf/crates/behaviour/service/api" }
#reactive-graph-config-model = { version = "0.10.0", path = "../inexor-rgf/crates/config/model" }
#reactive-graph-graph = { version = "0.10.0", path = "../inexor-rgf/crates/graph" }
#reactive-graph-plugin-api = { version = "0.10.0", path = "../inexor-rgf/crates/plugin/api" }
#reactive-graph-plugin-derive = { version = "0.10.0", path = "../inexor-rgf/crates/plugin/derive" }
#reactive-graph-reactive-model-api = { version = "0.10.0", path = "../inexor-rgf/crates/reactive/model/api" }
#reactive-graph-reactive-model-impl = { version = "0.10.0", path = "../inexor-rgf/crates/reactive/model/impl" }
#reactive-graph-reactive-service-api = { version = "0.10.0", path = "../inexor-rgf/crates/reactive/service/api", features = ["derive"] }
#reactive-graph-reactive-service-impl = { version = "0.10.0", path = "../inexor-rgf/crates/reactive/service/impl" }
#reactive-graph-runtime-api = { version = "0.10.0", path = "../inexor-rgf/crates/runtime/api" }
#reactive-graph-runtime-model = { version = "0.10.0", path = "../inexor-rgf/crates/runtime/model" }
#reactive-graph-type-system-api = { version = "0.10.0", path = "../inexor-rgf/crates/type-system/api", features = ["json5", "toml"] }
#reactive-graph-lifecycle = { version = "0.10.0", path = "../inexor-rgf/crates/lifecycle" }
#reactive-graph-utils-test = { version = "0.10.0", path = "../inexor-rgf/crates/utils/test" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)', 'cfg(fn_traits)', 'cfg(unboxed_closures)', 'cfg(rustc_nightly)'] }

[workspace.lints.clippy]
non_std_lazy_statics = "warn"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
