[package]
name = "deployment-all"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["lib"]

[package.metadata.cargo-post.dependencies]
reactive-graph-utils-deployment = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
