[package]
name = "inexor-rgf-model-json"
description = "Inexor - Reactive Graph Flow - Model - JSON"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indradb-lib = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }

inexor-rgf-core-model = { workspace = true }
inexor-rgf-core-reactive = { workspace = true }

[lib]
crate-type = ["lib"]
