[package]
name = "inexor-rgf-model-taxonomy"
description = "Inexor - Reactive Graph Flow - Model - Taxonomy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indradb-lib = { workspace = true }
lazy_static = { workspace = true }
paste = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }

inexor-rgf-core-model = { workspace = true }

[lib]
crate-type = ["lib"]
