[package]
name = "reactive-graph-plugin-graphql-client"
description = "Reactive Graph - Plugin - GraphQL Client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

exclude = ["web/node_modules"]

[package.metadata.deb]
name = "libreactive-graph-plugin-graphql-client"
depends = "reactive-graph"
assets = [
    ["target/release/libreactive_graph_plugin_graphql_client.so", "usr/share/reactive-graph/default/plugins/installed/libreactive_graph_plugin_graphql_client.so", "755"],
]

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
http = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"] }
mime_guess = { workspace = true }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
springtime-di = { workspace = true, default-features = false, features = ["threadsafe", "derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }

reactive-graph-config-model = { workspace = true }
reactive-graph-graph = { workspace = true }
reactive-graph-plugin-api = { workspace = true }

[build-dependencies]
static-files = "0.2.3"

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
