[package]
name = "inexor-rgf-plugin-graphql-schema-visualization"
description = "Inexor - Reactive Graph Flow - Plugin - GraphQL Schema Visualization"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

exclude = [ "web/node_modules" ]
include = [ "web/dist/**" ]

[dependencies]
async-trait = { workspace = true }
http = { workspace = true }
indradb-lib = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"] }
mime_guess = { workspace = true }
query_interface = { workspace = true }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
uuid = { workspace = true }

inexor-rgf-core-config = { workspace = true }
inexor-rgf-core-di = { workspace = true, features = ["async"] }
inexor-rgf-core-frp = { workspace = true }
inexor-rgf-core-model = { workspace = true }
inexor-rgf-core-plugins = { workspace = true }

[build-dependencies]
static-files = "0.2.3"

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
glob = "0.3"
