[package]
name = "reactive-graph-std-arithmetic-model"
description = "Reactive Graph - Model - Arithmetic"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../../README.md"

[dependencies]
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

reactive-graph-graph = { workspace = true }
reactive-graph-behaviour-model-api = { workspace = true }
reactive-graph-reactive-model-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }
reactive-graph-reactive-service-api = { workspace = true, features = ["derive"] }
reactive-graph-runtime-model = { workspace = true }

reactive-graph-std-result-model = { version = "0.10.0", path = "../../../result/crates/model" }

[dev-dependencies]
reactive-graph-graph = { workspace = true, features = ["test"] }

[lib]
crate-type = ["lib"]

[lints]
workspace = true
