[package]
name = "reactive-graph-plugin-arithmetic"
description = "Reactive Graph - Plugin - Arithmetic"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libreactive-graph-plugin-arithmetic"
depends = "reactive-graph, libreactive-graph-plugin-base, libreactive-graph-plugin-trigger, libreactive-graph-plugin-result"
assets = [
    ["target/release/libreactive_graph_plugin_arithmetic.so", "usr/share/reactive-graph/default/plugins/installed/libreactive_graph_plugin_arithmetic.so", "755"],
]

[dependencies]
async-trait = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"] }
num-traits = { workspace = true }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
springtime-di = { workspace = true, default-features = false, features = ["threadsafe", "derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }

reactive-graph-plugin-api = { workspace = true }
reactive-graph-type-system-api = { workspace = true }
reactive-graph-graph = { workspace = true }
reactive-graph-reactive-model-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }
reactive-graph-behaviour-model-api = { workspace = true }
reactive-graph-behaviour-model-impl = { workspace = true }
reactive-graph-runtime-model = { workspace = true }

reactive-graph-model-arithmetic = { version = "0.10.0", path = "../../crates/model" }
reactive-graph-model-result = { version = "0.10.0", path = "../../../result/crates/model" }

[build-dependencies]
rustc_version = { workspace = true }

[dev-dependencies]
reactive-graph-graph = { workspace = true, features = ["test"] }

[features]
default = []
rustc_nightly = []

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rustc_nightly)'] }

[package.metadata.cargo-post.dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
