[package]
name = "reactive-graph-model-base"
description = "Reactive Graph - Model - Base"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../../README.md"

[dependencies]
license = { workspace = true }
paste = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }

reactive-graph-graph = { workspace = true }

[lib]
crate-type = ["lib"]
