[package]
name = "reactive-graph-std-base"
description = "Reactive Graph - STD - Base"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libreactive-graph-std-base"
depends = "reactive-graph"
assets = [
    ["target/release/libreactive_graph_std_base.so", "usr/share/reactive-graph/default/plugins/installed/libreactive_graph_std_base.so", "755"],
]

[dependencies]
async-trait = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"] }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
springtime-di = { workspace = true, default-features = false, features = ["threadsafe", "derive"] }

reactive-graph-plugin-api = { workspace = true }
reactive-graph-type-system-api = { workspace = true }
reactive-graph-graph = { workspace = true }

[dev-dependencies]

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
