[package]
name = "inexor-rgf-model-binary"
description = "Inexor - Reactive Graph Flow - Model - Binary"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
data-url = { workspace = true }
lazy_static = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }

inexor-rgf-graph = { workspace = true }
inexor-rgf-reactive = { workspace = true }
inexor-rgf-reactive-api = { workspace = true }
inexor-rgf-model-runtime = { workspace = true }
inexor-rgf-model-base = { version = "0.10.0", path = "../../../base/crates/model" }
inexor-rgf-model-file = { version = "0.10.0", path = "../../../file/crates/model" }
inexor-rgf-behaviour-api = { workspace = true }

[lib]
crate-type = ["lib"]
