[package]
name = "inexor-rgf-model-binary"
description = "Inexor - Reactive Graph Flow - Model - Binary"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
data-url = { workspace = true }
lazy_static = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }

inexor-rgf-behaviour-model-api = { workspace = true }
inexor-rgf-graph = { workspace = true }
inexor-rgf-reactive-model-api = { workspace = true }
inexor-rgf-reactive-model-impl = { workspace = true }
inexor-rgf-runtime-model = { workspace = true }

inexor-rgf-model-base = { version = "0.10.0", path = "../../../base/crates/model" }
inexor-rgf-model-file = { version = "0.10.0", path = "../../../file/crates/model" }

[lib]
crate-type = ["lib"]
